--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -1,43 +1,131 @@
-.m-demo{position:fixed;top:50%;left:50%;width:400px;height:400px;margin:-200px;perspective:1000px;cursor:default;}
-.m-demo .box{position:fixed;width:100%;height:100%;transform-style:preserve-3d;animation:rotate 5s 15s linear infinite both;}
-.m-demo .box>div{position:absolute;width:100%;height:100%;box-sizing:border-box;border:2px solid rgba(0,0,0,0.8);background:rgba(0,0,0,0);transition:1s linear;text-align:center;line-height:400px;font-size:50px;}
-.m-demo .box .top{animation:top 2s 2s linear both;}
-.m-demo .box .bottom{animation:bottom 2s 4s linear both;}
-.m-demo .box .left{animation:left 2s 6s linear both;}
-.m-demo .box .right{animation:right 2s 8s linear both;}
-.m-demo .box .back{animation:back 2s 10s linear both;}
-.m-demo .box .front{animation:front 2s 12s linear both;}
-.m-demo:hover .box>div{border-color:rgba(0,0,0,0);color:#fff;}
-.m-demo:hover .box .top{background:rgba(255,255,0,0.6);}
-.m-demo:hover .box .bottom{background:rgba(0,255,0,0.6);}
-.m-demo:hover .box .left{background:rgba(0,255,255,0.6);}
-.m-demo:hover .box .right{background:rgba(0,0,255,0.6);}
-.m-demo:hover .box .front{background:rgba(255,0,255,0.6);}
-.m-demo:hover .box .back{background:rgba(255,0,0,0.6);}
-@keyframes rotate{
-  100%{transform:rotate3d(2,2,2,360deg);}
-}
-@keyframes top{
-  100%{transform:rotateX(90deg) translateZ(200px);}
-}
-@keyframes bottom{
-  100%{transform:rotateX(-90deg) translateZ(200px);}
-}
-@keyframes left{
-  100%{transform:rotateY(-90deg) translateZ(200px);}
-}
-@keyframes right{
-  100%{transform:rotateY(90deg) translateZ(200px);}
-}
-@keyframes front{
-  100%{transform:translateZ(200px);}
-}
-@keyframes back{
-  100%{transform:rotateY(180deg) translateZ(200px);}
-}
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
+/*首页水印*/
+.watermark{
+    .project-name{
+        font-size: 120px;
+    }
+}
+/*旋转box*/
+.m-demo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    margin: -200px;
+    perspective: 1000px;
+    cursor: default;
+    .box {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        animation: rotate 5s 15s linear infinite both;
+        > div {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
+            border: 2px solid rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0);
+            transition: 1s linear;
+            text-align: center;
+            line-height: 400px;
+            font-size: 50px;
+        }
+        .top {
+            animation: top 2s 2s linear both;
+        }
+        .bottom {
+            animation: bottom 2s 4s linear both;
+        }
+        .left {
+            animation: left 2s 6s linear both;
+        }
+        .right {
+            animation: right 2s 8s linear both;
+        }
+        .back {
+            animation: back 2s 10s linear both;
+        }
+        .front {
+            animation: front 2s 12s linear both;
+        }
+        &:hover {
+            > div {
+                border-color: rgba(0, 0, 0, 0);
+                color: #fff;
+            }
+            .top {
+                background: rgba(255, 255, 0, 0.6);
+            }
+            .bottom {
+                background: rgba(0, 255, 0, 0.6);
+            }
+            .bottom {
+                background: rgba(0, 255, 0, 0.6);
+            }
+            .left {
+                background: rgba(0, 255, 255, 0.6);
+            }
+            .right {
+                background: rgba(0, 0, 255, 0.6);
+            }
+            .front {
+                background: rgba(255, 0, 255, 0.6);
+            }
+            .back {
+                background: rgba(255, 0, 0, 0.6);
+            }
+        }
+    }
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate3d(2, 2, 2, 360deg);
+    }
+}
+
+@keyframes top {
+    100% {
+        transform: rotateX(90deg) translateZ(200px);
+    }
+}
+
+@keyframes bottom {
+    100% {
+        transform: rotateX(-90deg) translateZ(200px);
+    }
+}
+
+@keyframes left {
+    100% {
+        transform: rotateY(-90deg) translateZ(200px);
+    }
+}
+
+@keyframes right {
+    100% {
+        transform: rotateY(90deg) translateZ(200px);
+    }
+}
+
+@keyframes front {
+    100% {
+        transform: translateZ(200px);
+    }
+}
+
+@keyframes back {
+    100% {
+        transform: rotateY(180deg) translateZ(200px);
+    }
+}
+
+
 
 
 
