title:16-08-17-00 Description:none

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -1,26 +1,28 @@
 * {
     box-sizing: border-box;
 }
+
 /*首页水印*/
-.watermark{
+.watermark {
     position: absolute;
     width: 1000px;
     height: 235px;
     text-align: center;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    opacity:.2;
-    .project-name{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: .2;
+    .project-name {
         font-size: 120px;
     }
-    .project-tagline{
+    .project-tagline {
         font-size: 50px;
     }
-    .project-saySomething{
-        font-size:25px;
+    .project-saySomething {
+        font-size: 25px;
     }
 }
+
 /*旋转box*/
 .m-demo {
     position: fixed;
@@ -97,7 +99,7 @@
 
 @keyframes rotate {
     100% {
-        transform: rotate3d(10, 10,2, 360deg);
+        transform: rotate3d(10, 10, 2, 360deg);
     }
 }
 
