--- a/demo/JS/MagicTown.less
+++ b/demo/JS/MagicTown.less
@@ -1,3 +1,62 @@
+@magic-font:"ChannelSlanted2540a6d73315f7b";
+@purple-opacity:rgba(153,50,204,.5);
+@purple:rgb(153,50,204);
+a{
+    text-decoration: none;
+}
+body{
+    background: url("image/emt.jpg") no-repeat fixed;
+}
+.glass-layer{
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    filter: blur(5px);
+    opacity: .75;
+    background-color: #fff;
+}
 .head-title{
-    
+    width: 1200px;
+    height: 150px;
+    line-height: 150px;
+    margin:0 auto;
+    font-size: 50px;
+    text-align: center;
+    font-family:@magic-font;
+    color: @purple;
+    box-shadow: 0 10px 10px -8px @purple;
+}
+.view-layer{
+    position: absolute;
+    width:100%;
+}
+.js-link{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 25px;
+    z-index: 2;
+    box-sizing: border-box;
+    opacity: .5;
+    >div{
+        float: left;
+        width:550px;
+        &+&{
+            margin-left: 50px;
+        }
+        ul{
+            list-style-type: none;
+            li{
+                height: 60px;
+                line-height:60px;
+                text-align: center;
+                font-size: 30px;
+                box-shadow: 0 10px 10px -8px @purple-opacity;
+                a{
+                    color: #9932cc;
+                }
+            }
+        }
+    }
 }
